--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,15 @@ dependencies:
 
   sqflite: ^2.3.2
   path_provider: ^2.1.1
+  path: ^1.9.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  sqflite_common_ffi: ^2.3.6
+  path_provider_platform_interface: any
 
 flutter:
   uses-material-design: true
