--- a/android/.gitignore
+++ b/android/.gitignore
@@ -12,3 +12,7 @@ GeneratedPluginRegistrant.java
 key.properties
 **/*.keystore
 **/*.jks
+android/app/src/main/res/mipmap*/ic_launcher.png
+ios/Runner/Assets.xcassets/**
+macos/Runner/Assets.xcassets/**
+windows/runner/resources/*.ico
