--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,5 +13,6 @@ jobs:
           channel: stable
           cache: true
       - run: flutter pub get
+      - run: dart format --set-exit-if-changed .
       - run: flutter analyze
       - run: flutter test
