--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dependencies:
   archive: ^3.3.7
   rar: ^3.0.1
   pdf_render: ^1.4.0
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.18.0
 
 
 
@@ -32,3 +35,4 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
