--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,16 +13,16 @@ dependencies:
   sqflite: ^2.3.2
   path_provider: ^2.1.1
 
-  path: ^1.9.0
+  path: 1.9.1
 
   http: ^0.13.6
   file_picker: ^6.1.1
   archive: ^3.3.7
-  rar: ^3.0.1
+  rar: ^0.1.0
   pdf_render: ^1.4.0
   flutter_localizations:
     sdk: flutter
-  intl: ^0.18.0
+  intl: ^0.20.2
 
 
 
@@ -30,7 +30,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  sqflite_common_ffi: ^2.3.6
+  sqflite_common_ffi: ^2.3.0
   path_provider_platform_interface: any
 
 flutter:
