--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,8 @@ android/app/src/main/res/mipmap*/ic_launcher.png
 ios/Runner/Assets.xcassets/**
 macos/Runner/Assets.xcassets/**
 windows/runner/resources/*.ico
+
+# Desktop platform directories
+/linux/
+/macos/
+/windows/
