--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   archive: ^3.3.7
   rar: ^0.1.0
   pdf_render: ^1.4.0
+  permission_handler: ^10.4.3
   flutter_localizations:
     sdk: flutter
   intl: ^0.20.2
