--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,11 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   sqflite_common_ffi: ^2.3.0
   path_provider_platform_interface: any
+  pdf_render_platform_interface: any
 
 flutter:
   uses-material-design: true
   generate: true
+
+dependency_overrides:
+  plugin_platform_interface: ^2.1.8
