--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,11 +32,13 @@ jobs:
 
       - name: Install test formatter
         run: |
-          dart pub global activate junitreport
+          pub global activate junitreport
           echo "$HOME/.pub-cache/bin" >> $GITHUB_PATH
 
       - name: Run Flutter tests
-        run: flutter test --machine | tojunit --output junit.xml
+        run: |
+          mkdir -p build/test-results
+          flutter test --machine | tojunit --output build/test-results/flutter-junit.xml
 
       - name: Run Android unit tests
         run: ./gradlew testDebugUnitTest
@@ -54,7 +56,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: flutter-tests
-          path: junit.xml
+          path: build/test-results/flutter-junit.xml
 
       - name: Upload Android test results
         uses: actions/upload-artifact@v3
