--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   permission_handler: ^12.0.1
   sqflite: ^2.3.2
   sqflite_common_ffi: ^2.3.0
+  sqflite_common_ffi_web: ^1.0.1
   flutter_localizations:
     sdk: flutter
   intl: ^0.20.2
