--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   path_provider: ^2.1.1
   path: ^1.9.0
   http: ^1.1.0
-  archive: ^4.0.7
+  archive: ^3.3.7
   file_selector: ^1.0.3
   permission_handler: ^12.0.1
   sqflite: ^2.3.2
@@ -21,7 +21,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.20.2
-  native_pdf_renderer: ^6.0.0
+  native_pdf_renderer: ^3.1.0
   go_router: ^14.1.3
 
 
@@ -32,6 +32,7 @@ dev_dependencies:
   integration_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  path_provider_platform_interface: ^2.1.2
 
 flutter:
   uses-material-design: true
